Fixed wrap text in the message textbox

--- a/app/assets/stylesheets/components/_chat_box.scss
+++ b/app/assets/stylesheets/components/_chat_box.scss
@@ -53,25 +53,14 @@
   -moz-border-radius: 3px;
 }
 
-// .message-card {
-//   margin: 10px;
-//   padding: 5px 15px;
-//   overflow: hidden;
-//   height: auto;
-//   background: white;
-//   box-shadow: 0 0 5px rgba(0,0,0,0.2);
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-// }
-
 .message-user {
   display: flex;
 }
 .message-user-details {
   display: flex;
   flex-direction: column;
-  margin-left: 5px;
+  margin-left: 8px;
+  padding-top: 4px;
   p {
     font-size: 0.7em;
     margin: 0;
@@ -84,11 +73,13 @@
 .message-user-text {
   display: flex;
   flex-direction: column;
+  margin-left: 8px;
+  margin-right: 8px;
+  word-wrap: break-word;
   p {
     font-size: 0.8em;
     margin: 0;
   }
-  text-align: right;
 }
 
 .message-user-time {
